Bug 275047 - kiten slowly leaks memory
Summary: kiten slowly leaks memory
Status: RESOLVED FIXED
Alias: None
Product: kiten
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: Joseph Kerian
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-06 15:58 UTC by Eckhart Wörner
Modified: 2011-07-21 19:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eckhart Wörner 2011-06-06 15:58:58 UTC
Version:           unspecified (using KDE 4.6.3) 
OS:                Linux

This bug has been copied over from http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=610534 and has been verified to still exist in KDE SC 4.6.3

----

I use kiten's clipboard search feature a lot. So I run kiten,
start browsing a site, hit a word I don't know or can't read, 
highlight it and look at the results kiten has.

If I start kiten and leave it running eventually it's resisdent size
hits 1G, then slowly it'll grow to about 1.5GB at which point my system
becomes unusable.

Reproducible: Didn't try
Comment 1 Jaime Torres 2011-07-21 18:54:58 UTC
Git commit ce589b56bb46c9cef4c387773d57e98dff562d86 by Jaime Torres.
Committed on 21/07/2011 at 20:45.
Pushed by jtamate into branch 'master'.

Delete the nonused results

If a pointer is not added to the list of results, then delete it.
delete before nullify another pointer
BUG: 275047
REVIEW: 102009

M  +1    -1    app/kiten.cpp
M  +1    -1    lib/DictKanjidic/dictfilekanjidic.cpp
M  +1    -1    lib/DictEdict/dictfileedict.h
M  +5    -1    lib/DictEdict/dictfileedict.cpp
M  +1    -1    lib/DictKanjidic/dictfilekanjidic.h

http://commits.kde.org/kiten/ce589b56bb46c9cef4c387773d57e98dff562d86
Comment 2 Jaime Torres 2011-07-21 19:09:44 UTC
Git commit 01297311e9eb5520982ccf6aadbed64e1a382c00 by Jaime Torres.
Committed on 21/07/2011 at 20:45.
Pushed by jtamate into branch '4.7'.

Delete the nonused results

If a pointer is not added to the list of results, then delete it.
delete before nullify another pointer
BUG: 275047
REVIEW: 102009
(cherry picked from commit ce589b56bb46c9cef4c387773d57e98dff562d86)

M  +1    -1    app/kiten.cpp
M  +1    -1    lib/DictKanjidic/dictfilekanjidic.cpp
M  +1    -1    lib/DictEdict/dictfileedict.h
M  +5    -1    lib/DictEdict/dictfileedict.cpp
M  +1    -1    lib/DictKanjidic/dictfilekanjidic.h

http://commits.kde.org/kiten/01297311e9eb5520982ccf6aadbed64e1a382c00