Delete the nonused results

If a pointer is not added to the list of results, then delete it.
delete before nullify another pointer
BUG: 275047
REVIEW: 102009
(cherry picked from commit ce589b56bb46c9cef4c387773d57e98dff562d86)